<resources>
    <string name="app_name">Otium</string>
    <string name="logo_name">logoOtium</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_save">Save</string>
    <string name="menu_gallery">Gallery</string>
    <string name="fab">fab</string>
    <string name="title_activity_add_serie">AddSerieActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Titulo...</string>
    <string name="season">Temporada</string>
    <string name="chapter">Capitulo</string>
    <string name="button_substract">-</string>
    <string name="button_add">+</string>
    <string name="button_save">Guardar</string>
    <string name="url_project">https://github.com/Charly30000/Otium</string>
    <string name="title_app">Otium</string>
    <string name="state">Estado</string>
    <string name="type">Tipo</string>
    <string name="button_delete">Eliminar</string>
    <string name="btn_createCsv">Exportar archivo CSV</string>
    <string name="btn_read_csv">Importar archivo CSV</string>
    <string name="btn_create_json">Exportar archivo Json (Recomendado)</string>
    <string name="btn_read_json">Importar archivo Json</string>
    <string name="btn_add_list_series">Añadir mediante lista masiva</string>
    <string name="massive_list_instructions">"Instrucciones de uso: (click para ver) \nIntroduce el Estado y el Tipo, dentro de la caja de texto deberas de introducir en cada linea el titulo de tu Tipo seleccionado.\nAl darle al boton de 'Guardar', se crearan todos tus tipos con valores predeterminados y con el Estado y el Tipo que has seleccionado"</string>
    <string name="hint_example_massive_items">"Toy Story \nEl gran torino \nLa bella y la bestia \nAvatar"</string>
    <string name="sv_find_title">Buscar titulo</string>
</resources>
