<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">


    <Button
        android:id="@+id/btnCreateCsv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_createCsv"
        android:textSize="16sp"
        app:icon="@android:drawable/ic_menu_edit" />

    <Button
        android:id="@+id/btnReadCsv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_read_csv"
        android:textSize="16sp"
        app:icon="@android:drawable/ic_menu_save" />

    <Button
        android:id="@+id/btnCreateJson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_json"
        android:textSize="16sp"
        app:icon="@android:drawable/ic_menu_edit" />

    <Button
        android:id="@+id/btnReadJson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_read_json"
        android:textSize="16sp"
        app:icon="@android:drawable/ic_menu_save" />

    <Button
        android:id="@+id/btnAddListSerie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_list_series"
        android:textSize="16sp"
        app:icon="@android:drawable/ic_menu_edit" />
</LinearLayout>