<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMassiveListActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvInstructions"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/massive_list_instructions"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="177dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/state"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinnerStateMassive"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="177dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/type"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinnerTypeMassive"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <EditText
                android:id="@+id/etMassive"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint_example_massive_items"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/btnSaveMassive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_save" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>